_includes/assets/css/inline.css
:root {
	--primary: white;
	--secondary: #395B64;
	--text: white;
	--button-action: #E7F6F2;
	--background: #2C3333;
	--highlight: #F7EC59;
}

:root {
	--shadow-color: 180deg 12% 8%;
	--shadow-elevation-lowest:
		0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.27),
		0.4px 0.8px 1.1px -1.1px hsl(var(--shadow-color) / 0.29),
		1px 1.9px 2.5px -2.1px hsl(var(--shadow-color) / 0.32);
	--shadow-elevation-low:
		0.6px 0.8px 1.2px hsl(var(--shadow-color) / 0.38),
		1.1px 1.5px 2.3px -0.9px hsl(var(--shadow-color) / 0.47),
		2.8px 3.9px 5.9px -1.8px hsl(var(--shadow-color) / 0.57);
	--shadow-elevation-medium:
		0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.28),
		0.8px 1.7px 2.2px -0.7px hsl(var(--shadow-color) / 0.3),
		2px 4px 5.3px -1.4px hsl(var(--shadow-color) / 0.32),
		4.8px 9.5px 12.5px -2.1px hsl(var(--shadow-color) / 0.35);
	--shadow-elevation-high:
		0.3px 0.5px 0.7px hsl(var(--shadow-color) / 0.26),
		1.5px 3px 3.9px -0.3px hsl(var(--shadow-color) / 0.27),
		2.7px 5.4px 7.1px -0.6px hsl(var(--shadow-color) / 0.28),
		4.3px 8.7px 11.4px -0.9px hsl(var(--shadow-color) / 0.29),
		6.7px 13.5px 17.7px -1.2px hsl(var(--shadow-color) / 0.3),
		10.3px 20.6px 27.1px -1.5px hsl(var(--shadow-color) / 0.31),
		15.4px 30.9px 40.7px -1.8px hsl(var(--shadow-color) / 0.32),
		22.5px 45px 59.2px -2.1px hsl(var(--shadow-color) / 0.33);
}

/*
https://mxb.dev/blog/color-theme-switcher/
https://colorhunt.co/palette/2c3333395b64a5c9cae7f6f2
#2C3333
#395B64
#A5C9CA
#E7F6F2*/

*,
*:before,
*:after {
	box-sizing: border-box;
	padding: 0;
	margin: 0;

	line-height: 1.5;
}

html,
body {
	font-family: -apple-system, BlinkMacSystemFont, avenir next, avenir, segoe ui, helvetica neue, helvetica, Cantarell, Ubuntu, roboto, noto, arial, sans-serif;
	/* https://systemfontstack.com/ */
}

body {
	display: grid;
	/* grid-gap: 1em; */
	grid-template-rows: 1fr auto;
	justify-content: center;
	min-height: 100vh;


	color: var(--text);
	background-color: var(--background);
}

/* Fix these elements not inheriting body's font or color */
textarea,
input,
button,
select,
a {
	font-family: inherit;
	font-size: inherit;
	color: inherit;
}

header,
main,
footer {
	max-width: 37.5em;
	/* padding: 1em; */
}

main {
	padding: 1em;
	margin-top: 4em;
}

header {
	padding-top: 1em;
	position: absolute;
    left: 0;
    right: 0;
    margin: 0 auto;
}

footer {
	border-top: 1px solid var(--secondary);
	margin-top: 2em;
	margin-bottom: 1em;
	text-align: center;
}

p {
	margin-bottom: 1.5em;
}

footer a[href] {
	color: var(--text);
	/* text-decoration: underline; */
}

p > a[href],
p > a[href]:visited {
	color: var(--highlight);
	text-decoration-line:none;
	/* text-decoration-color: var(--highlight);
	text-decoration-thickness: 0.1rem;
	text-decoration-skip-ink: none;
	text-underline-offset: -0.1rem; */
}


p > a[href]:hover {
	/* text-decoration: none; */
	color: var(--background);
	background-color: var(--highlight);
}

img {
	max-width: 100%;
	height: auto;
}

main {
	padding-bottom: 2em;
}

main :first-child,
main>article :first-child {
	margin-top: 0;
}

pre {
	overflow: auto;
	max-height: 600px;
}

pre code {
	/* font-size: 14px;
	direction: ltr;
	text-align: left;
	white-space: pre;
	word-spacing: normal;
	word-break: normal;
	-moz-tab-size: 2;
	tab-size: 2;
	-webkit-hyphens: none;
	-moz-hyphens: none;
	-ms-hyphens: none;
	hyphens: none;
	padding: 1em;
	margin: .5em 0; */
	white-space: pre-wrap;
}

::selection {
	color: var(--background);
	background-color: var(--button-action);
}

/* Header Nav */
header nav ul {
	padding: 0;
	list-style: none;
	user-select: none;
	/* pointer-events: none; */
	display: flex;
    flex-wrap: nowrap;
    flex-direction: row;
    justify-content: space-evenly;
    align-items: center;
}

header nav li {
	display: inline-block;
	margin: .25em .25em;
	transition: transform 0.02s, box-shadow 0.08s, background-color 0.15s, color 0.15s;
	border-radius: 1px;
	border: 1px solid var(--secondary);
	/* pointer-events: auto; */
}

header nav li[data-current="current item"] {
	background-color: var(--secondary);
	box-shadow: var(--shadow-elevation-low);
	transform: rotate(-7deg);
}

header nav li[data-current="current item"] a {
	cursor: default;
	pointer-events: none;
	display: inline-block;
	transform: rotate(7deg);
}

header nav li a {
	padding: .25em .5em;
	margin: 0 .25em;
	text-decoration: none;
}

header nav ul:hover>* {
	/* opacity: 0.8; */
	background-color: var(--background);
	box-shadow: none;
}

header nav ul:hover>*:hover {
	/* opacity: 1; */
	background-color: var(--secondary);
	box-shadow: var(--shadow-elevation-low);
}

.pagetitle {
	margin-bottom: 1em;
}


/* Posts List */
.postslist {
	margin-top: 1em;
}

.posttitle a {
	text-decoration: none;
	/* color: var(--highlight); */
}

.postmeta {
	color: darkgray;
}

article:not(:last-child) {
	margin-bottom: 1em;
	padding-bottom: 1em;
	border-bottom: 1px solid #eee;
	border-bottom: 1px solid var(--secondary);
}

main>section>article>* {
	margin-top: 0;
	margin-bottom: .5em;
}

/* Post Tags */
a[rel="tag"],
a[rel="tag"]:visited {
	display: inline-block;
	/* vertical-align: text-top; */
	text-transform: uppercase;
	letter-spacing: .1em;
	font-size: .625em;
	padding: 0 .5em;
	line-height: 2em;
	height: 2em;
	border: 1px solid var(--secondary);
	background-color: var(--secondary)!important;
	color: var(--primary)!important;
	border-radius: .25em;
	text-decoration: none;
	margin: 0 .5em .5em 0;
}

a[rel="tag"]:hover,
a[rel="tag"]:focus {
	border: 1px solid var(--primary);
	background-color: var(--primary);
	color: var(--secondary);
}

a[rel="tag"]:last-child {
	margin-right: 0;
}

/* Contact Form */
form[name="contact"] {
	display: grid;
	padding: 2em 0;
}

form[name="contact"] label {
	display: none;
}

form[name="contact"] input,
form[name="contact"] textarea,
form[name="contact"] button {
	width: 100%;
	padding: 1em;
	margin-bottom: 1em;
	margin-left: auto;
	margin-right: auto;
	font-size: 1rem;

	border: none;
	box-shadow: var(--shadow-elevation-lowest);
}

form[name="contact"] textarea {
	resize: vertical;
}

form[name="contact"] button {
	background-color: var(--secondary);
	color: var(--text);
	box-shadow: var(--shadow-elevation-medium);
	cursor: pointer;
	transition: box-shadow 0.08s, background-color 0.15s, color 0.15s;
}

form[name="contact"] button:hover,
form[name="contact"] button:focus {
	background-color: var(--button-action);
	color: var(--secondary);
	box-shadow: var(--shadow-elevation-high);
}

/* Responsiveness */
@media screen and (min-width:768px) {
	:root {
		font-size: 1.1rem;
	}
}

@media screen and (max-width:360px) {
	header nav {
		font-size: calc(4vw);
	}
}

